add 2019 offseason and skystone

--- a/www/includes/header.html
+++ b/www/includes/header.html
@@ -34,6 +34,8 @@
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">Seasons <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a href="../2019-2020.html">2019/2020 Sky Stone</a></li>
+                            <li><a href="../2019-Off-Season.html">2019 Off-Season</a></li>
                             <li><a href="../2018-2019.html">2018/2019<br>Rover Ruckus</a></li>
                             <li><a href="../2017-2018.html">2017/2018<br>Relic Recovery</a></li>
                             <li><a href="../2017-Off-Season.html">2017 Off-Season</a></li>
